Gestion de l'Api protégé de l'événement ainsi que Swagger protégé avec authentification
